--- a/backend/templates/inventory-sold.html
+++ b/backend/templates/inventory-sold.html
@@ -13,4 +13,5 @@
 
 {% block other_content %}
     <h1>Items Currently Sold - Not Shipped</h1>
+    <script type="text/javascript" src="{% static 'javascript/inventory-sold.js' %}"></script>
 {% endblock %}
