--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -229,11 +229,11 @@
                             <select name="inventory_item" required id="id_inventory_item" hidden>
                                 <option value="{{ x.inventory_item.id }}" selected>{{ x.inventory_item}}</option>
                             </select>
-                            <select name="sold_detail" required id="id_sold_detail">
+                            <select name="sold_detail" required id="id_sold_detail" hidden>
                                 <option value="{{ x.sold_data.id }}" selected>{{ x.sold_data }}</option>
                             </select>
                             <select name="shipping_address" required id="id_shipping_address">
-                                <option value="" selected>Select a Shipping Address</option>
+                                <option value="" selected>Select a Shipping Address or Create a New One</option>
                             {% if shipping %}
                                 {% for t in shipping %}
                                     <option value="{{ t.id }}">{{ t }}</option>
@@ -251,19 +251,21 @@
                     </div>
                     <div id="shipping_address_form-{{ x.id }}" class="none">
                         <form method="POST" action="/api/shipping-address-api/" onsubmit="shippingAddressSubmit(event, {{ x.id }})">
+                        {% csrf_token %}
+                            <input type="number" name="inventory_object_id" value="{{ x.id }}" hidden>
                             <select name="customer" required id="id_customer">
                                 <option value="{{ x.sold_data.purchased_by.id }}" selected>{{ x.sold_data.purchased_by }}</option>
                                 {% for u in customers %}
                                     <option value="{{ u.id }}">{{ u }}</option>
                                 {% endfor %}
                             </select>
-                            <input type="text" name="address" maxlength="255" required id="id_address">
-                            <input type="text" name="city" maxlength="100" required id="id_city">
-                            <input type="text" name="state" maxlength="2" required id="id_state">
-                            <input type="text" name="country" maxlength="100" id="id_country">
-                            <input type="text" name="zip_code" maxlength="10" required id="id_zip_code">
+                            <input type="text" name="address" maxlength="255" required id="id_address" placeholder="Enter Street Address">
+                            <input type="text" name="city" maxlength="100" required id="id_city" placeholder="Enter City">
+                            <input type="text" name="state" maxlength="2" required id="id_state" placeholder="Enter State as 2 Letters">
+                            <input type="text" name="country" maxlength="100" id="id_country" placeholder="Enter Country (not required)">
+                            <input type="text" name="zip_code" maxlength="10" required id="id_zip_code" placeholder="Enter Zip Code">
                             <textarea name="other" cols="40" rows="10" id="id_other"></textarea>
-                            <input type="number" name="inventory_object_id">
+
                         </form>
                     </div>
                     </div>
