--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -225,11 +225,11 @@
                     <div id="shipping_data_form-{{ x.id }}" class="none">
                         <form method="POST" action="/api/shipping-data-api/" onsubmit="shippingDataSubmit(event, {{ x.id }})">
                             {% csrf_token %}
-                            <input name="inventory_object_id" value="{{ x.id }}" required hidden>
-                            <select name="inventory_item" required id="id_inventory_item" hidden>
+                            <input name="inventory_object_id" value="{{ x.id }}" required type="hidden">
+                            <select name="inventory_item" required id="id_inventory_item">
                                 <option value="{{ x.inventory_item.id }}" selected>{{ x.inventory_item}}</option>
                             </select>
-                            <select name="sold_detail" required id="id_sold_detail" hidden>
+                            <select name="sold_detail" required id="id_sold_detail">
                                 <option value="{{ x.sold_data.id }}" selected>{{ x.sold_data }}</option>
                             </select>
                             <select name="shipping_address" required id="id_shipping_address">
@@ -252,7 +252,7 @@
                     <div id="shipping_address_form-{{ x.id }}" class="none">
                         <form method="POST" action="/api/shipping-address-api/" onsubmit="shippingAddressSubmit(event, {{ x.id }})">
                         {% csrf_token %}
-                            <input type="number" name="inventory_object_id" value="{{ x.id }}" hidden>
+                            <input type="number" name="inventory_object_id" value="{{ x.id }}" type="hidden">
                             <select name="customer" required id="id_customer">
                                 <option value="{{ x.sold_data.purchased_by.id }}" selected>{{ x.sold_data.purchased_by }}</option>
                                 {% for u in customers %}
@@ -265,7 +265,7 @@
                             <input type="text" name="country" maxlength="100" id="id_country" placeholder="Enter Country (not required)">
                             <input type="text" name="zip_code" maxlength="10" required id="id_zip_code" placeholder="Enter Zip Code">
                             <textarea name="other" cols="40" rows="10" id="id_other"></textarea>
-
+                            <input  type="submit" value="Submit">
                         </form>
                     </div>
                     </div>
