SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -282,7 +282,7 @@
 
             <ol><li><hr><details><summary>Inventory Item: {{ x.inventory_item.id }}</summary><hr>
             <ul>
-                <li>Type: {{ x.inectory_item.type }}</li>
+                <li>Type: {{ x.inventory_item.type }}</li>
                 <li>Name: {{ x.inventory_item.name }}</li>
                 <li>Serial Number: {{ x.inventory_item.serial_number }}</li>
                 <li>Due Date: {{ x.inventory_item.due_date }}</li>
