--- a/backend/static/css/inventory-forms.css
+++ b/backend/static/css/inventory-forms.css
@@ -5,17 +5,28 @@
 
 .form-group {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr;
+
 }
 
 .sold-data-form {
-    display: block;
+    display: flex;
     border: 5px solid black;
 }
 
+.sold-data-form * {
+    display: grid;
+    padding: 5px;
+}
+
 .create-customer-form {
-    display: block;
+    display: flex;
     border: 5px solid black;
+}
+
+.create-customer-form * {
+    display: flex;
+    flex-direction: column;
 }
 
 .form-group-shipping {
