SHIPPING API's woooo Inventory page

--- a/api/templates/api.html
+++ b/api/templates/api.html
@@ -11,8 +11,8 @@
     <input type='checkbox' name='in_stock' id='in_stock' value='False'>"
     <label for='in_stock'>True</label> "
     <input type='checkbox' name='in_stock' id='in_stock' value='True'>"
-
-
+    <input type="number" name="inventory_object_id" id="inventory_object_id">
+    <input type="checkbox" name="completed_order" id="completed_order" value="True">
 
     <input type='checkbox' name='delete' id='delete' value='True'>"
     <button class="" type="submit">Submit</button>
