--- a/backend/static/css/build.css
+++ b/backend/static/css/build.css
@@ -428,6 +428,10 @@ button {
     background: fuchsia;
 }
 
+#build-create-sold-form-btn {
+    background: fuchsia;
+}
+
 .create-form-upload-btns {
     display: grid;
     margin-top: 500px;
