--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -36,7 +36,7 @@
                 </div>
                 <div id="sold-update-btn-group" class="none">
                     <button id="build-create-customer-btn" class="btnchanger" onclick="openNewSoldCustomerDisplay(); closeSoldChangeDiv();">Create a New Customer</button>
-                    <button id="" class="btnchanger" onclick="openSoldCustomerSelect(); closeSoldNewCustomerDiv()">Change to Sold</button>
+                    <button id="build-create-sold-form-btn" class="btnchanger" onclick="openSoldCustomerSelect(); closeSoldNewCustomerDiv()">Change to Sold</button>
                     <button id="" class="btnchanger" onclick="closeSoldNewCustomerDiv(); createSoldDateChange()">Update Date Sold</button>
                     <button id="" class="btnchanger" onclick="createSoldInfoChange(); closeSoldNewCustomerDiv()">Update Info</button>
                     <button id="" class="btnchanger" onclick="createSoldOtherChange(); closeSoldNewCustomerDiv()">Update Other</button>
