--- a/backend/static/css/contact-requests.css
+++ b/backend/static/css/contact-requests.css
@@ -1,3 +1,12 @@
 #messages-btn {
     color: white;
 }
+
+ol li {
+    background: rgba(0,0,0,.5);
+    width: 500px;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 10px;
+
+}
