SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -29,7 +29,7 @@
                 <div class="nav-links"><a class="top-nav-links" id="coming-soon-btn" href="/manager/inventory-comingsoon/">Coming Soon</a>
                     <div class="dropdown-content">
                         <a href="###">ALL</a>
-                        <a href="###">Sport Rigs</a>
+                        <a href="/manager/inventory-comingsoon?filter_by=sport_rigs/">Sport Rigs</a>
                         <a href="###">Tandem</a>
                         <a href="###">Student</a>
                         <a href="###">Canopies</a>
