SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -28,52 +28,52 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="coming-soon-btn" href="/manager/inventory-comingsoon/">Coming Soon</a>
                     <div class="dropdown-content">
-                        <a href="###">ALL</a>
+                        <a href="/manager/inventory-comingsoon?filter_by=sport_rigs">ALL</a>
                         <a href="/manager/inventory-comingsoon?filter_by=sport_rigs">Sport Rigs</a>
-                        <a href="###">Tandem</a>
-                        <a href="###">Student</a>
-                        <a href="###">Canopies</a>
-                        <a href="###">Javelins</a>
+                        <a href="/manager/inventory-comingsoon?filter_by=tandem">Tandem</a>
+                        <a href="/manager/inventory-comingsoon?filter_by=student">Student</a>
+                        <a href="/manager/inventory-comingsoon?filter_by=canopies">Canopies</a>
+                        <a href="/manager/inventory-comingsoon?filter_by=javelin_odyssey">Javelins</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="instock-btn" href="/manager/inventory-instock/">In Stock</a>
                     <div class="dropdown-content">
-                        <a href="###">ALL</a>
-                        <a href="###">Sport Rigs</a>
-                        <a href="###">Tandem</a>
-                        <a href="###">Student</a>
-                        <a href="###">Canopies</a>
-                        <a href="###">Javelins</a>
+                        <a href="/manager/inventory-instock?filter_by=sport_rigs">ALL</a>
+                        <a href="/manager/inventory-instock?filter_by=sport_rigs">Sport Rigs</a>
+                        <a href="/manager/inventory-instock?filter_by=tandem">Tandem</a>
+                        <a href="/manager/inventory-instock?filter_by=student">Student</a>
+                        <a href="/manager/inventory-instock?filter_by=canopies">Canopies</a>
+                        <a href="/manager/inventory-instock?filter_by=javelin_odyssey">Javelins</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="sold-btn" href="/manager/inventory-sold/">Sold</a>
                     <div class="dropdown-content">
-                        <a href="###">ALL</a>
-                        <a href="###">Sport Rigs</a>
-                        <a href="###">Tandem</a>
-                        <a href="###">Student</a>
-                        <a href="###">Canopies</a>
-                        <a href="###">Javelins</a>
+                        <a href="/manager/inventory-sold?filter_by=sport_rigs">ALL</a>
+                        <a href="/manager/inventory-sold?filter_by=sport_rigs">Sport Rigs</a>
+                        <a href="/manager/inventory-sold?filter_by=tandem">Tandem</a>
+                        <a href="/manager/inventory-sold?filter_by=student">Student</a>
+                        <a href="/manager/inventory-sold?filter_by=canopies">Canopies</a>
+                        <a href="/manager/inventory-sold?filter_by=javelin_odyssey">Javelins</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="shipping-btn" href="/manager/inventory-shipping/">Shipping</a>
                     <div class="dropdown-content">
-                        <a href="###">ALL</a>
-                        <a href="###">Sport Rigs</a>
-                        <a href="###">Tandem</a>
-                        <a href="###">Student</a>
-                        <a href="###">Canopies</a>
-                        <a href="###">Javelins</a>
+                        <a href="/manager/inventory-shipping?filter_by=sport_rigs">ALL</a>
+                        <a href="/manager/inventory-shipping?filter_by=sport_rigs">Sport Rigs</a>
+                        <a href="/manager/inventory-shipping?filter_by=tandem">Tandem</a>
+                        <a href="/manager/inventory-shipping?filter_by=student">Student</a>
+                        <a href="/manager/inventory-shipping?filter_by=canopies">Canopies</a>
+                        <a href="/manager/inventory-shipping?filter_by=javelin_odyssey">Javelins</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="completed-btn" href="/manager/inventory-completed/">Completed Orders</a>
                     <div class="dropdown-content">
-                        <a href="###">ALL</a>
-                        <a href="###">Sport Rigs</a>
-                        <a href="###">Tandem</a>
-                        <a href="###">Student</a>
-                        <a href="###">Canopies</a>
-                        <a href="###">Javelins</a>
+                        <a href="/manager/inventory?filter_by=sport_rigs">ALL</a>
+                        <a href="/manager/inventory-completed?filter_by=sport_rigs">Sport Rigs</a>
+                        <a href="/manager/inventory-completed?filter_by=tandem">Tandem</a>
+                        <a href="/manager/inventory-completed?filter_by=student">Student</a>
+                        <a href="/manager/inventory-completed?filter_by=canopies">Canopies</a>
+                        <a href="/manager/inventory-completed?filter_by=javelin_odyssey">Javelins</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="contact-btn" href="/manager/builder">Build Item</a></div>
