SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="coming-soon-btn" href="/manager/inventory-comingsoon/">Coming Soon</a>
                     <div class="dropdown-content">
-                        <a href="/manager/inventory-comingsoon?filter_by=sport_rigs">ALL</a>
+                        <a href="/manager/inventory-comingsoon/">ALL</a>
                         <a href="/manager/inventory-comingsoon?filter_by=sport_rigs">Sport Rigs</a>
                         <a href="/manager/inventory-comingsoon?filter_by=tandem">Tandem</a>
                         <a href="/manager/inventory-comingsoon?filter_by=student">Student</a>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="instock-btn" href="/manager/inventory-instock/">In Stock</a>
                     <div class="dropdown-content">
-                        <a href="/manager/inventory-instock?filter_by=sport_rigs">ALL</a>
+                        <a href="/manager/inventory-instock/">ALL</a>
                         <a href="/manager/inventory-instock?filter_by=sport_rigs">Sport Rigs</a>
                         <a href="/manager/inventory-instock?filter_by=tandem">Tandem</a>
                         <a href="/manager/inventory-instock?filter_by=student">Student</a>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="sold-btn" href="/manager/inventory-sold/">Sold</a>
                     <div class="dropdown-content">
-                        <a href="/manager/inventory-sold?filter_by=sport_rigs">ALL</a>
+                        <a href="/manager/inventory-sold/">ALL</a>
                         <a href="/manager/inventory-sold?filter_by=sport_rigs">Sport Rigs</a>
                         <a href="/manager/inventory-sold?filter_by=tandem">Tandem</a>
                         <a href="/manager/inventory-sold?filter_by=student">Student</a>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="shipping-btn" href="/manager/inventory-shipping/">Shipping</a>
                     <div class="dropdown-content">
-                        <a href="/manager/inventory-shipping?filter_by=sport_rigs">ALL</a>
+                        <a href="/manager/inventory-shipping/">ALL</a>
                         <a href="/manager/inventory-shipping?filter_by=sport_rigs">Sport Rigs</a>
                         <a href="/manager/inventory-shipping?filter_by=tandem">Tandem</a>
                         <a href="/manager/inventory-shipping?filter_by=student">Student</a>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="completed-btn" href="/manager/inventory-completed/">Completed Orders</a>
                     <div class="dropdown-content">
-                        <a href="/manager/inventory?filter_by=sport_rigs">ALL</a>
+                        <a href="/manager/inventory-completed/">ALL</a>
                         <a href="/manager/inventory-completed?filter_by=sport_rigs">Sport Rigs</a>
                         <a href="/manager/inventory-completed?filter_by=tandem">Tandem</a>
                         <a href="/manager/inventory-completed?filter_by=student">Student</a>
