SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -366,8 +366,8 @@
 {% endblock %}
 </div>
 
-<div id="app"></div><script src="./../react-frontend/prod_files/react-frontend.09619817.js"></script>
-
+<div id="app"></div>
+  <script src="/../../react/dist/react.e31bb0bc.js"></script>
 
 </main>
 
