--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -366,8 +366,9 @@
 {% endblock %}
 </div>
 
+
 <div id="app"></div>
-  <script src="/../../react/dist/react.e31bb0bc.js"></script>
+  <script src="./prod_files/react.09619817.js"></script>
 
 </main>
 
