SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -370,6 +370,7 @@
 </main>
 
 <script type="text/javascript" src="{% static 'javascript/inventory.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascript/inventory-sold.js' %}"></script>
 
 </html>
 
