--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -314,7 +314,7 @@
             </details>
                 {% if x.sold_data %}
             </li>
-                <li><hr><details><summary id="inventory-sold-data-id-number-{{ x.id }}">Sold Data: {{ x.sold_data.id }} --- Sold on: {{ x.sold_data.date_sold }}</summary><hr>
+                <li><hr><details><summary id="inventory-sold-data-id-number-{{ x.sold_data.id }}">Sold Data: {{ x.sold_data.id }} --- Sold on: {{ x.sold_data.date_sold }}</summary><hr>
                 <ul>
                     <li>Purchased By: {{ x.sold_data.purchased_by }}</li>
                     <li>Date Sold: {{ x.sold_data.date_sold }}</li>
