--- a/api/templates/build-update-sold.html
+++ b/api/templates/build-update-sold.html
@@ -4,5 +4,6 @@
     <textarea name="info"></textarea>
     <textarea name="other"></textarea>
     <input type="date" min="2022-01-01" max="2030-01-01" name="date_sold">
+    <input type="text" name="url">
     <button class="" type="submit">Submit</button>
 </form>
