SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -77,6 +77,7 @@
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="contact-btn" href="/manager/builder">Build Item</a></div>
+                <div class="nav-links"><a class="top-nav-links" id="contact-btn" href="/manager/contact-requests">Messages</a></div>
                 <div class="nav-links"><a class="top-nav-links" id="contact-btn" href="/manager/media">Media Manager</a>
                 <div class="dropdown-content">
                         <a href="###">upload</a>
