SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -161,7 +161,7 @@
                     {% if not x.completed_order %}
                         <button id="update-sold-information-btn" onclick="updateInventorySold({{ x.sold_data.id }}, {{ x.id }})">Update Sold Information</button>
                         <div id="div-inventory-update" class="none">
-                            <form method="POST" id="inventory-update-form" action="/api/build-update-sold-data-api/" onsubmit="updateInventorySoldData(event)" >
+                            <form method="POST" id="inventory-update-form" action="/api/build-update-sold-data-api/" onsubmit="updateInventorySoldData(event, {{ x.id }})" >
                             {% csrf_token %}
                                 <div id="update-inventory-change-display" class="update-inventory-change-display"></div>
                             </form>
