--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -157,7 +157,7 @@
             <ul>
                 <li>Inventory Item: {{ x.inventory_item }}</li>
                 {% if x.sold_data %}
-                    <li id="sold-data-one">Sold Data: {{ x.sold_data }}</li>
+                    <li id="sold-data-one-{{ x.id }}">Sold Data: {{ x.sold_data }}</li>
                     {% if not x.completed_order %}
                         <button id="update-sold-information-btn" onclick="updateInventorySold({{ x.sold_data.id }}, {{ x.id }})">Update Sold Information</button>
                         <div id="div-inventory-update" class="none">
@@ -316,7 +316,7 @@
                 {% if x.sold_data %}
             </li>
                 <li><hr><details><summary id="inventory-sold-data-id-number-{{ x.sold_data.id }}">Sold Data: {{ x.sold_data.id }} --- Sold on: {{ x.sold_data.date_sold }}</summary><hr>
-                <ul>
+                <ul id="sold-data-ul">
                     <li>Purchased By: {{ x.sold_data.purchased_by }}</li>
                     <li>Date Sold: {{ x.sold_data.date_sold }}</li>
                     <li>Info: {{ x.sold_data.info }}</li>
