SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory-shipping.html
+++ b/backend/templates/inventory-shipping.html
@@ -13,4 +13,5 @@
 
 {% block other_content %}
     <h1>Items Currently Shipping</h1>
+    <script src="{% static 'javascript/inventory-sold.js' %}"></script>
 {% endblock %}
