--- a/api/templates/build-update-sold.html
+++ b/api/templates/build-update-sold.html
@@ -3,6 +3,7 @@
     <input type="number" name="id">
     <textarea name="info"></textarea>
     <textarea name="other"></textarea>
+    <input name="purchased_by_id" type="number">
     <input type="date" min="2022-01-01" max="2030-01-01" name="date_sold">
     <input type="number" name="obj_id">
     <input type="text" name="url">
