SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -183,7 +183,7 @@
                     <div id="sold_data_form-{{ x.id }}" class="none">
                         <form method="POST" action="/api/sold-data-api/" onsubmit="DataSubmit(event, {{ x.id }})">
                             {% csrf_token %}
-                            <select name="inventory_item" required id="id_inventory_item" hidden>
+                            <select name="inventory_item" required id="id_inventory_item" type="hidden">
                                 <option value="{{ x.inventory_item.id }}" selected>{{ x.inventory_item }}</option>
                             </select>
 
