--- a/backend/static/css/admin-index-styles.css
+++ b/backend/static/css/admin-index-styles.css
@@ -39,6 +39,9 @@ a {
 
 .nav-container {
     display: grid;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 10px;
     max-width: 98%;
     margin: 1%;
     grid-template-rows: 1fr;
