--- a/backend/static/css/inventory-forms.css
+++ b/backend/static/css/inventory-forms.css
@@ -4,9 +4,9 @@
 
 
 .form-group {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
 
+    flex-direction: row;
 }
 
 .sold-data-form {
@@ -21,12 +21,23 @@
 
 .create-customer-form {
     display: flex;
-    border: 5px solid black;
+    height: fit-content;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    background: blueviolet;
+    box-shadow: 0 0 10px black;
+
 }
 
 .create-customer-form * {
     display: flex;
+    margin: 5px;
     flex-direction: column;
+    font-size: 12pt;
+    border-radius: 5px;
+    border: hidden;
+
 }
 
 .form-group-shipping {
