--- a/backend/static/css/inventory-forms.css
+++ b/backend/static/css/inventory-forms.css
@@ -5,18 +5,28 @@
 
 .form-group {
     display: flex;
-
     flex-direction: row;
+    transform: translate(-15%);
 }
 
 .sold-data-form {
     display: flex;
-    border: 5px solid black;
+    height: fit-content;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    background: blueviolet;
+    box-shadow: 0 0 10px black;
 }
 
 .sold-data-form * {
-    display: grid;
-    padding: 5px;
+    display: flex;
+    margin: 5px;
+    flex-direction: column;
+    font-size: 12pt;
+    border-radius: 5px;
+    border: hidden;
+    max-width: 350px;
 }
 
 .create-customer-form {
